manifests/wallarm-ingress-4.10.6.tgz-manifest.yaml
---
# Source: wallarm-ingress/templates/controller-service-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: wallarm-ingress-4.10.6
    app.kubernetes.io/name: wallarm-ingress
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.10.6"
    app.kubernetes.io/part-of: wallarm-ingress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: my-release-wallarm-ingress-controller-admission
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: https-webhook
      port: 443
      targetPort: webhook
      appProtocol: https
  selector:
    app.kubernetes.io/name: wallarm-ingress
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: controller
---
# Source: wallarm-ingress/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    helm.sh/chart: wallarm-ingress-4.10.6
    app.kubernetes.io/name: wallarm-ingress
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.10.6"
    app.kubernetes.io/part-of: wallarm-ingress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: my-release-wallarm-ingress-controller
  namespace: default
spec:
  type: LoadBalancer
  ipFamilyPolicy: SingleStack
  ipFamilies: 
    - IPv4
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
      appProtocol: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
      appProtocol: https
  selector:
    app.kubernetes.io/name: wallarm-ingress
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: controller
---
# Source: wallarm-ingress/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    helm.sh/chart: wallarm-ingress-4.10.6
    app.kubernetes.io/name: wallarm-ingress
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.10.6"
    app.kubernetes.io/part-of: wallarm-ingress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: my-release-wallarm-ingress-controller
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: wallarm-ingress
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: controller
  replicas: 1
  revisionHistoryLimit: 10
  minReadySeconds: 0
  template:
    metadata:
      labels:
        helm.sh/chart: wallarm-ingress-4.10.6
        app.kubernetes.io/name: wallarm-ingress
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "4.10.6"
        app.kubernetes.io/part-of: wallarm-ingress
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: controller
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: controller
          image: "docker.io/wallarm/ingress-controller:4.10.6-1"
          imagePullPolicy: IfNotPresent
          lifecycle: 
            preStop:
              exec:
                command:
                - /wait-shutdown
          args: 
            - /nginx-ingress-controller
            - --publish-service=$(POD_NAMESPACE)/my-release-wallarm-ingress-controller
            - --election-id=my-release-wallarm-ingress-leader
            - --controller-class=k8s.io/ingress-nginx
            - --ingress-class=nginx
            - --configmap=$(POD_NAMESPACE)/my-release-wallarm-ingress-controller
            - --validating-webhook=:8443
            - --validating-webhook-certificate=/usr/local/certificates/cert
            - --validating-webhook-key=/usr/local/certificates/key
          securityContext: 
            runAsNonRoot: true
            runAsUser: 101
            allowPrivilegeEscalation: false
            seccompProfile: 
              type: RuntimeDefault
            capabilities:
              drop:
              - ALL
              add:
              - NET_BIND_SERVICE
            readOnlyRootFilesystem: false
          livenessProbe: 
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe: 
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
            - name: webhook
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: webhook-cert
              mountPath: /usr/local/certificates/
              readOnly: true
          resources: 
            requests:
              cpu: 100m
              memory: 90Mi
      nodeSelector: 
        kubernetes.io/os: linux
      serviceAccountName: my-release-wallarm-ingress
      terminationGracePeriodSeconds: 300
      volumes:
        - name: webhook-cert
          secret:
            secretName: my-release-wallarm-ingress-admission
---
# Source: wallarm-ingress/templates/controller-ingressclass.yaml
# We don't support namespaced ingressClass yet
# So a ClusterRole and a ClusterRoleBinding is required
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    helm.sh/chart: wallarm-ingress-4.10.6
    app.kubernetes.io/name: wallarm-ingress
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.10.6"
    app.kubernetes.io/part-of: wallarm-ingress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
# Source: wallarm-ingress/templates/admission-webhooks/validating-webhook.yaml
# before changing this value, check the required kubernetes version
# https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#prerequisites
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
  labels:
    helm.sh/chart: wallarm-ingress-4.10.6
    app.kubernetes.io/name: wallarm-ingress
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.10.6"
    app.kubernetes.io/part-of: wallarm-ingress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: admission-webhook
  name: my-release-wallarm-ingress-admission
webhooks:
  - name: validate.nginx.ingress.kubernetes.io
    matchPolicy: Equivalent
    rules:
      - apiGroups:
          - networking.k8s.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - ingresses
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: my-release-wallarm-ingress-controller-admission
        namespace: default
        path: /networking/v1/ingresses
